--- a/JsonToCsv/Components/Pages/Home.razor
+++ b/JsonToCsv/Components/Pages/Home.razor
@@ -1,13 +1,15 @@
 ﻿@page "/"
 
+@inject JsonToCsvConverterService JsonToCsvConverterService
+
 <PageTitle>Home</PageTitle>
 
 <MudTextField @ref="jsonTextField"
-              T="string"
-              Label="JSON"
-              Lines="3"
-              Variant="Variant.Outlined"
-              Text="@jsonText" />
+    T="string"
+    Label="JSON"
+    Lines="3"
+    Variant="Variant.Outlined"
+    Text="@jsonText" />
 
 <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="@ConvertToCsv">Convert</MudButton>
 
@@ -16,8 +18,5 @@
     private MudTextField<string> jsonTextField;
     private string jsonText;
 
-    private void ConvertToCsv()
-    {
-        Console.WriteLine("Converting JSON to CSV...");
-    }
+    private void ConvertToCsv() => JsonToCsvConverterService.Convert(jsonText);
 }
