Add MudTextField for CSV and show converted JSON in there.

--- a/JsonToCsv/Components/Pages/Home.razor
+++ b/JsonToCsv/Components/Pages/Home.razor
@@ -5,18 +5,23 @@
 <PageTitle>Home</PageTitle>
 
 <MudTextField @ref="jsonTextField"
-    T="string"
-    Label="JSON"
-    Lines="3"
-    Variant="Variant.Outlined"
-    Text="@jsonText" />
+              T="string"
+              Label="JSON"
+              Lines="3"
+              Variant="Variant.Outlined" />
 
-<MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="@ConvertToCsv">Convert</MudButton>
+<MudTextField @ref="csvTextField"
+              T="string"
+              Label="CSV"
+              Lines="3"
+              Variant="Variant.Outlined" />
+
+<MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="@ConvertToCsvAsync">Convert</MudButton>
 
 @code
 {
     private MudTextField<string> jsonTextField;
-    private string jsonText;
+    private MudTextField<string> csvTextField;
 
-    private void ConvertToCsv() => JsonToCsvConverterService.Convert(jsonText);
+    private async Task ConvertToCsvAsync() => await csvTextField.SetText(JsonToCsvConverterService.Convert(jsonTextField.Text));
 }
